--- a/firstpage.html
+++ b/firstpage.html
@@ -19,7 +19,8 @@ p {
 </head>
 <body>
 
-<h1>YOU ARE A NOMADIC TRAVELER BUT UNIQUE AS YOU TRAVEL BETWEEN WOLRDS, THIS IS YOUR JOURNEY THRU FANTASICAL WOLRDS</h1>
+<h1>YOU ARE A NOMADIC TRAVELER BUT UNIQUE AS YOU TRAVEL BETWEEN WOLRDS, THIS IS YOUR JOURNEY THRU FANTASICAL WOLRDS<br>
+    Press enter to begin</h1>
 
 </body>
 </html>
