--- a/firstpage.html
+++ b/firstpage.html
@@ -20,7 +20,7 @@ p {
 <body>
 
 <h1>YOU ARE A NOMADIC TRAVELER BUT UNIQUE AS YOU TRAVEL BETWEEN WORLDS, THIS IS YOUR JOURNEY THRU FANTASTICAL WOLRDS<br>
-    Press enter to begin</h1>
-
+    click begin </h1>
+<button onclick="FIRE">BEGIN</button>
 </
 </html>
