--- a/firstpage.html
+++ b/firstpage.html
@@ -21,6 +21,6 @@ p {
 
 <h1>YOU ARE A NOMADIC TRAVELER BUT UNIQUE AS YOU TRAVEL BETWEEN WORLDS, THIS IS YOUR JOURNEY THRU FANTASTICAL WOLRDS<br>
     click begin </h1>
-<button onclick="FIRE">BEGIN</button>
+<button onclick="this.innerHTML=FIRE">BEGIN</button>
 </
 </html>
