--- a/firstpage.html
+++ b/firstpage.html
@@ -15,6 +15,21 @@ p {
     font-family: verdana;
     font-size: 20px;
 }
+    
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}    
+<button class="button">FIRE</button>
+    
 </style>
 </head>
 <body>
