--- a/animate.html
+++ b/animate.html
@@ -3,15 +3,15 @@
 <head>
 <style> 
 div {
-    width: 100px;
-    height: 100px;
-    background-color: red;
+    width: 10px;
+    height: 200px;
+    background-color: white;
     position: relative;
     -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
     -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
     -webkit-animation-iteration-count: infinite; /* Safari 4.0 - 8.0 */
     animation-name: example;
-    animation-duration: 4s;
+    animation-duration: 1s;
     animation-iteration-count: infinite;
 }
 
@@ -34,4 +34,8 @@ div {
 }
 </style>
 </head>
+
+<body>
+    <p> Hello people, I exist </p>
+</body>
 </html>
