--- a/firstpage.html
+++ b/firstpage.html
@@ -5,17 +5,15 @@
 body {
     background-color: Black;
 }
-
 h1 {
     color: white;
     text-align: center;
 }
-
 p {
     font-family: verdana;
     font-size: 20px;
 }
-    
+
 .button {
     background-color: #4CAF50;
     border: none;
@@ -27,15 +25,16 @@ p {
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-}    
-<button class="button">FIRE</button>
-    
+}
+
 </style>
 </head>
 <body>
-
 <h1>YOU ARE A NOMADIC TRAVELER BUT UNIQUE AS YOU TRAVEL BETWEEN WORLDS, THIS IS YOUR JOURNEY THRU FANTASTICAL WOLRDS<br>
     click begin </h1>
-<button onclick="this.innerHTML=FIRE">BEGIN</button>
-</
+    <button class=button >FIRE</button>
+
+<button onclick=this.innerHTML="FIRE">BEGIN</button>
+</body>
 </html>
+
