--- a/tryin.html
+++ b/tryin.html
@@ -16,7 +16,7 @@ img:hover {
 <body>
 
 <h1>Image Transparency</h1>
-<img src="water.jpg" alt="water" width="170" height="100">
+<img src="water2.jpg" alt="water" width="170" height="100">
 <img src="jumpingwater.jpg" alt="Jump" width="170" height="100">
 <img src="splash.jpg" alt="Splish" width="170" height="100">
 
