--- a/clicktry.html
+++ b/clicktry.html
@@ -3,21 +3,9 @@
 <body>
 
 <div 
-onmousedown="mDown(this)" onmouseup="mUp(this)"
+onclick = changeText(this)="Haha"
 style="background-color:#8727E6;width:100px;height:100px;padding:40px;">
 Water</div>
-
-<script>
-function mDown(obj) {
-    obj.style.backgroundColor = "#1ec5e5";
-    obj.innerHTML = "Release Me";
-}
-
-function mUp(obj) {
-    obj.style.backgroundColor="#D94A38";
-    obj.innerHTML="Thank You";
-}
-</script>
 
 </body>
 </html> 
