--- a/tryin.html
+++ b/tryin.html
@@ -17,6 +17,9 @@ img:hover {
 
 <h1>Image Transparency</h1>
 <img src="water2.jpg" alt="Water" width="370" height="300">
+    h1 {
+    box-shadow: 2px 2px;
+}
 <img src="jumpingwater.jpg" alt="Jump" width="370" height="300">
 <img src="splash.jpg" alt="Splish" width="370" height="300">
 
