--- a/tryin.html
+++ b/tryin.html
@@ -11,17 +11,15 @@ img:hover {
     opacity: 1.0;
     filter: alpha(opacity=100); /* For IE8 and earlier */
 }
+h1 {
+    text-shadow: 2px 2px;
+}
 </style>
 </head>
 <body>
 
 <h1>Image Transparency</h1>
 <img src="water2.jpg" alt="Water" width="370" height="300">
-    <style>
-    h1 {
-    box-shadow: 2px 2px;
-}
-    <style>
 <img src="jumpingwater.jpg" alt="Jump" width="370" height="300">
 <img src="splash.jpg" alt="Splish" width="370" height="300">
 
