--- a/transitions.html
+++ b/transitions.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html> 
   <body>
-   <img src="water.jpg">
+   background-image:url('fire.jpg');
+background-size:cover;
+width:100%;
+height:100;
   </body>
 </html>
