--- a/transitions.html
+++ b/transitions.html
@@ -1,9 +1,6 @@
 <!DOCTYPE HTML>
 <html> 
   <body>
-   background-image:url('fire.jpg');
-background-size:cover;
-width:100%;
-height:100;
+   <img src = "http://www.pictureicon.com/images/download-fantastic-world-fire-rocks-cave-fantasy-wallpaper-in-res.jpg" alt = "fire.jpg">
   </body>
 </html>
