--- a/transitions.html
+++ b/transitions.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html> 
   <body>
-   <img src = "http://www.pictureicon.com/images/download-fantastic-world-fire-rocks-cave-fantasy-wallpaper-in-res.jpg" alt = "fire.jpg">
+    <p>hello world</p>
   </body>
 </html>
