--- a/tryin.html
+++ b/tryin.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 <style>
+div.cities {
+    background-color: black;
+    color: white;
+    margin: 20px 0 20px 0;
+    padding: 20px;
+}
 img {
     opacity: 0.2;
     filter: alpha(opacity=50); /* For IE8 and earlier */
@@ -14,6 +20,12 @@ img:hover {
 </style>
 </head>
 <body>
+    
+<div class="cities">
+<h2>Tokyo</h2>
+<p>Tokyo is the capital of Japan, the center of the Greater Tokyo Area,
+and the most populous metropolitan area in the world.</p>
+</div>
 
 <img src="water2.jpg" alt="Water" width="370" height="300">
 <img src="jumpingwater.jpg" alt="Jump" width="370" height="300">
