--- a/clicktry.html
+++ b/clicktry.html
@@ -2,17 +2,20 @@
 <html>
 <body>
 
-<div 
-onclick(obj)
-style="background-color:#8727E6;width:100px;height:100px;padding:40px;">
-Water</div>
-  
-<script>
-function onClick(obj) {
-    obj.style.backgroundColor = "#1ec5e5";
-    obj.innerHTML = "Haha";
-}
+
+  <div id ="water"; onclick="display(this)"
+  style="background-color:#061853;width:300px;height:200px;padding:40px; color:white; font-size:100px; text-align:center;">
+  Water</div>
+
+
+
+  <script>
+  function display(obj) {
+      document.getElementById("water").style.display = 'none';
+  }
+
   </script>
 
+
 </body>
-</html> 
+</html>
