--- a/marginnav.html
+++ b/marginnav.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 body {
-    margin: 0;
+    margin-right: 50px;
 }
 
 ul {
@@ -44,7 +44,7 @@ li a:hover:not(.active) {
   <li><a href="#about">About</a></li>
 </ul>
 
-<div style="margin-left:10%;padding:1px 16px;height:1000px;">
+<div style="margin-left:25%;padding:1px 16px;height:1000px;">
   <h2>Fixed Full-height Side Nav</h2>
   <h3>Try to scroll this area, and see how the sidenav sticks to the page</h3>
   <p>Notice that this div element has a left margin of 25%. This is because the side navigation is set to 25% width. If you remove the margin, the sidenav will overlay/sit on top of this div.</p>
