--- a/firstpage.html
+++ b/firstpage.html
@@ -30,7 +30,7 @@ p {
 </style>
 </head>
 <body>
-<h1>YOU ARE A NOMADIC TRAVELER BUT UNIQUE AS YOU TRAVEL BETWEEN WORLDS, THIS IS YOUR JOURNEY THRU FANTASTICAL WOLRDS<br>
+<h1 style="font-family:Trebuchet;">YOU ARE A NOMADIC TRAVELER BUT UNIQUE AS YOU TRAVEL BETWEEN WORLDS, THIS IS YOUR JOURNEY THROUGH FANTASTICAL WOLRDS<br>
     click begin </h1>
     <button class=button >FIRE</button>
 
