--- a/firstpage.html
+++ b/firstpage.html
@@ -30,7 +30,8 @@ p {
 </style>
 </head>
 <body>
-<h1 style="font-family:Trebuchet;">YOU ARE A NOMADIC TRAVELER BUT UNIQUE AS YOU TRAVEL BETWEEN WORLDS, THIS IS YOUR JOURNEY THROUGH FANTASTICAL WOLRDS<br>
+<h1 style="font-family:Trebuchet;">You are a nomadic traveler but unique, as you have the ability to travel between worlds.<br>
+    This is your fantastical journey through the universe. <br>
     click begin </h1>
     <button class=button >FIRE</button>
 
