--- a/firstpage.html
+++ b/firstpage.html
@@ -30,9 +30,8 @@ p {
 </style>
 </head>
 <body>
-<h1 style="font-family:Trebuchet;">You are a nomadic traveler but unique, as you have the ability to travel between worlds.<br>
-    This is your fantastical journey through the universe. <br>
-    click begin </h1>
+<h1 style="font-family:Trebuchet;">You are a traveler between worlds far and wide.<br>
+    Begin your journey through the universe.</h1>
     <button class=button >FIRE</button>
 
 <button onclick=this.innerHTML="FIRE">BEGIN</button>
