--- a/firstpage.html
+++ b/firstpage.html
@@ -30,8 +30,8 @@ p {
 </style>
 </head>
 <body>
-<h1 style="font-family:Trebuchet;">You are a traveler between worlds far and wide.<br>
-    Begin your journey through the universe.</h1>
+<h1 style="font-family:Trebuchet;"><i>You are a traveler between worlds far and wide.<br>
+    Begin your journey through the universe.</i></h1>
     <button class=button >FIRE</button>
 
 <button onclick=this.innerHTML="FIRE">BEGIN</button>
