--- a/homepage.html
+++ b/homepage.html
@@ -36,8 +36,10 @@ p {
 
 </style>
 <body>
-<h1>YOU ARE A NOMADIC TRAVELER BUT UNIQUE AS YOU TRAVEL BETWEEN WORLDS, THIS IS YOUR JOURNEY THRU FANTASTICAL WORLDS<br>
-    click enter </h1>
+        <hr>
+<h1 style="font-family:Trebuchet;"><i>You are a traveler between worlds far and wide.<br>
+    Begin your journey through the universe. Click enter </i></h1>
+    <hr>
     <p>
 <button id="chow" class=button onclick="showIFrame()"> enter <button>
 </p>
