--- a/bios.html
+++ b/bios.html
@@ -1,4 +1,4 @@
-/*<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -41,4 +41,4 @@ li a:hover:not(.active) {
 </ul>
 
 </body>
-</html>*/
+</html>
