--- a/marginnav.html
+++ b/marginnav.html
@@ -33,19 +33,13 @@ li a:hover:not(.active) {
     background-color: #555;
     color: white;
 }
-.title{
-    margin: 30px;
-    padding: 20px;
-    color: "navy";
-    text-align: center
-   
-    }
+
 
 </style>
 </head>
 <body>
     
-    <h1 class="title"> Title </h1>
+    <h1 style="color: "navy"; text-align: center"> Title </h1>
 
 <ul>
   <li><a class="active" href="#home">Home</a></li>
