--- a/bios.html
+++ b/bios.html
@@ -1,4 +1,21 @@
-<!--
+<!--#menu {
+    top: 0;
+    left: 0;
+    height: 4.5vw;
+    width: 100%;
+    margin: 0;
+        margin-top: 0px;
+        margin-right: 0px;
+        margin-bottom: 0px;
+        margin-left: 0px;
+    padding: 0;
+        padding-top: 0px;
+        padding-right: 0px;
+        padding-bottom: 0px;
+        padding-left: 0px;
+    z-index: 70;
+    position: fixed;
+    background-color: #055C70;-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -43,4 +60,3 @@ li a:hover:not(.active) {
 
 </body>
 </html>
--->
