--- a/marginnav.html
+++ b/marginnav.html
@@ -39,11 +39,11 @@ li a:hover:not(.active) {
 </head>
 <body>
     
-<h1 style = "margin-top:15vh;text-align:center;">Creators</h1>
-<hr style = "width:3vw;border-color;black;" size = "10px">
+<h1 style = "margin-top:5vh;text-align:center;">Creators</h1>
+<hr style = "width:2vw;border-color;black;" size = "10px">
     
 <ul>
-  <li><a class="active" href="#home">Home</a></li>
+  <li><a class="active" href="homepage.html">Home</a></li>
   <li><a href="#about">About</a></li>
 </ul>
  
