--- a/marginnav.html
+++ b/marginnav.html
@@ -44,7 +44,7 @@ li a:hover:not(.active) {
     
 <ul>
   <li><a class="active" href="homepage.html">Home</a></li>
-  <li><a href="active" href="marginnav.html">About</a></li>
+  <li><a class="active" href="marginnav.html">About</a></li>
 </ul>
  
 <div style="margin-left:5%;padding:1px 16px;height:1000px;">
