--- a/marginnav.html
+++ b/marginnav.html
@@ -37,7 +37,7 @@ li a:hover:not(.active) {
 
 </style>
 </head>
-<body style="background-color:#ff9d42;">
+<body style="background-color:#ffb877;">
     
 <h1 style = "margin-top:5vh;text-align:center;">Creators</h1>
 <hr style = "width:2vw;border-color;black;" size = "10px">
