--- a/zoomzoom.html
+++ b/zoomzoom.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head>
 <style>
 div {
-    background-image: url("water-painted.jpg")
+    background-image: url("water-painted.jpg");
     background-repeat:no-repeat;
     background-attachment:fixed;
     background-size:cover;
@@ -19,9 +18,20 @@ div {
     100% {
         -webkit-transform: scale(2);
     }
+	}
+p {
+	font-family: verdana;
+    font-size: 20px;
+    text-align: center;
+    align-items: middle;
+    align-self: middle;
+    vertical-align:middle;
+    color: white;
+	}
 </style>
-</head>
 <body>
 	<div style="position:absolute;top:0;bottom:0;left:0;right:0;"></div>
+<hr>
+	<p> Hello world. </p>
 </body>
 </html>
