--- a/zoomex.html
+++ b/zoomex.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div class="zoomin">
-<img src="img/zimage.png"  title="All you need to know about CSS Transitions " />
+<img src="rainuni.jpg"  title="All you need to know about CSS Transitions " />
 </div>
  </body>
 </html>
