--- a/zoomex.html
+++ b/zoomex.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html >
 <head>
 <style type="text/css">
@@ -21,4 +21,23 @@
 <img src="rainuni.jpg"  title="All you need to know about CSS Transitions " />
 </div>
  </body>
+</html>-->
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+img {
+    border-radius: 50%;
+}
+</style>
+</head>
+<body>
+
+<h2>Rounded Images</h2>
+<p>Use the border-radius property to create circled images:</p>
+
+<img src="rainuni.jpg" alt="Paris" width="400" height="300">
+
+</body>
 </html>
+
