--- a/homepage.html
+++ b/homepage.html
@@ -37,11 +37,11 @@ p {
 </style>
 <body>
         <hr>
-<h1 style="font-family:Trebuchet;"><i>You are a traveler between worlds far and wide.<br>
-    Begin your journey through the universe. Click enter </i></h1>
+<h1 style="font-family:Trebuchet;"><i>A Whole World Waiting to be Discovered.<br>
+    </h1>
     <hr>
     <p>
-<button id="chow" class=button onclick="showIFrame()"> enter <button>
+<button id="chow" class=button onclick="showIFrame()"> Begin <button>
 </p>
 <script>
 // function hideToggle(button, elem) {
