--- a/marginnav.html
+++ b/marginnav.html
@@ -24,12 +24,12 @@ li a {
     text-decoration: none;
 }
 
-li a.active {
+<!--li a.active) {
     background-color: #4CAF50;
     color: white;
-}
+}-->
 
-li a:hover:not(.active) {
+li a:hover:(.active) {
     background-color: #555;
     color: white;
 }
@@ -37,7 +37,7 @@ li a:hover:not(.active) {
 
 </style>
 </head>
-<body style="background-color:#ffb877;">
+<body style="background-color:#5ec468;">
     
 <h1 style = "margin-top:5vh;text-align:center;">Creators</h1>
 <hr style = "width:2vw;border-color;black;" size = "10px">
