--- a/homepage.html
+++ b/homepage.html
@@ -10,7 +10,7 @@ h1 {
     text-align: center;
 }
 p {
-    font-family: Cinzel Decorative;
+    font-family: Book Antiqua;
     font-size: 20px;
     text-align: center;
     align-items: middle;
@@ -37,7 +37,7 @@ p {
 </style>
 <body>
         <hr>
-<h1 style="font-family:Cinzel Decorative;"><i>A Whole World Waiting to be Discovered.<br>
+<h1 style="font-family: Book Antiqua;"><i>A Whole World Waiting to be Discovered.<br>
     </h1>
     <hr>
     <p>
