--- a/marginnav.html
+++ b/marginnav.html
@@ -24,12 +24,12 @@ li a {
     text-decoration: none;
 }
 
-li a.active) {
+li a.active {
     background-color: #4CAF50;
     color: white;
 }
 
-li a:hover:.active {
+li a:hover:not(active) {
     background-color: #555;
     color: white;
 }
