--- a/homepage.html
+++ b/homepage.html
@@ -37,7 +37,7 @@ p {
 </style>
 <body>
         <hr>
-<h1 style="font-family: Book Antiqua;"><i>A Whole World Waiting to be Discovered.<br>
+<h1 style="font-family: Book Antiqua;"><i>A Whole World Waiting to be Discovered
     </h1>
     <hr>
     <p>
