--- a/marginnav.html
+++ b/marginnav.html
@@ -19,13 +19,13 @@ ul {
 
 li a {
     display: block;
-    color: #000;
+    color: #ffe093;
     padding: 8px 16px;
     text-decoration: none;
 }
 
 li a.active {
-    background-color: #4CAF50;
+    background-color: #ffe093;
     color: white;
 }
 
@@ -37,7 +37,7 @@ li a:hover:not(active) {
 
 </style>
 </head>
-<body style="background-color:#5ec468;">
+<body style="background-color:ffc4d9;">
     
 <h1 style = "margin-top:5vh;text-align:center;">Creators</h1>
 <hr style = "width:2vw;border-color;black;" size = "10px">
