--- a/marginnav.html
+++ b/marginnav.html
@@ -11,7 +11,7 @@ ul {
     margin: 0;
     padding: 0;
     width: 15%;
-    background-color: #f1f1f1;
+    background-color: #ffe093;
     position: fixed;
     height: 100%;
     overflow: auto;
@@ -19,7 +19,7 @@ ul {
 
 li a {
     display: block;
-    color: #ffe093;
+    color: #000;
     padding: 8px 16px;
     text-decoration: none;
 }
@@ -37,7 +37,7 @@ li a:hover:not(active) {
 
 </style>
 </head>
-<body style="background-color:ffc4d9;">
+<body style="background-color:#ffc4d9;">
     
 <h1 style = "margin-top:5vh;text-align:center;">Creators</h1>
 <hr style = "width:2vw;border-color;black;" size = "10px">
