--- a/home.html
+++ b/home.html
@@ -5,3 +5,9 @@
 body {
     background-color: Black;
 }
+    h1 {
+    color: white;
+    text-align: center;
+}
+
+    <h1 style="font-family: Book Antiqua;">A Whole World Waiting to be Discovered</h1>
