--- a/home.html
+++ b/home.html
@@ -10,4 +10,10 @@ body {
     text-align: center;
 }
 
+    p {
+    font-family: verdana;
+    font-size: 20px;
+        
     <h1 style="font-family: Book Antiqua;">A Whole World Waiting to be Discovered</h1>
+    <br>
+    <h6>Begin</h6>
