--- a/zoomex.html
+++ b/zoomex.html
@@ -12,7 +12,7 @@ img {
 <h2>Rounded Images</h2>
 <p>Use the border-radius property to create circled images:</p>
 
-<img src="castle.jpg" alt="Paris" width="400" height="300">
+<img src="castle.jpg" alt="Castle" width="400" height="300">
 
 </body>
 </html>
