--- a/marginnav.html
+++ b/marginnav.html
@@ -42,7 +42,8 @@ li a:hover:not(active) {
 <h1 style = "margin-top:5vh;text-align:center;">Creators</h1>
 <hr style = "width:2vw;border-color;black;" size = "10px">
     
-
+<img style="border-radius:50%;">
+<img src="castle.jpg" alt="Castle" width="400" height="300">
     
 <ul>
   <li><a class="active" href="homepage.html">Home</a></li>
