--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+    
 <style>
 body {
     background-color: Black;
@@ -9,11 +9,13 @@ body {
     color: white;
     text-align: center;
 }
-
-    p {
-    font-family: verdana;
-    font-size: 20px;
+	h3 {
+    color: white;
+    text-align: center; 
+}
+ </style>
         
-    <h1 style="font-family: Book Antiqua;">A Whole World Waiting to be Discovered</h1>
-    <br>
-    <h6>Begin</h6>
+    <h1 style="font-family: Book Antiqua;">A Whole World Waiting to be Discovered</h1><br>
+    <h3>Begin</h3>
+
+</html>
