--- a/marginnav.html
+++ b/marginnav.html
@@ -25,7 +25,7 @@ li a {
 }
 
 li a.active {
-    background-color: #ffe093;
+    background-color: #4CAF50;
     color: white;
 }
 
@@ -36,11 +36,16 @@ li a:hover:not(active) {
 
 </style>
 </head>
-<body style="background-color:#ffc4d9;">
+<body style="background-color:#e2f3ff;">
     
 <h1 style = "margin-top:5vh;text-align:center;">Creators</h1>
-<hr style = "width:2vw;border-color;black;" size = "10px">
+<hr style = "width:2vw;border-color:black;" size = "10px">
 
+<ul>
+  <li><a class="active" href="homepage.html">Home</a></li>
+  <li><a class="active" href="marginnav.html">About</a></li>
+</ul>
+ 
 <style>    
 img {
     border-radius: 50%;
@@ -48,18 +53,13 @@ img {
 </style>
 <img src="castle.jpg" alt="Castle" width="400" height="300">
 <br>
-<p style="text-align:center;font-size:1.5vw">Featuring us, the CREATORS:</p>
-    
-<ul>
-  <li><a class="active" href="homepage.html">Home</a></li>
-  <li><a class="active" href="marginnav.html">About</a></li>
-</ul>
- 
 <div style="margin-left:15%;padding:1px 16px;height:1000px;">
-  <h3>Try to scroll this area, and see how the sidenav sticks to the page</h3>
-  <p>Notice that this div element has a left margin of 12%. This is because the side navigation is set to 12% width. If you remove the margin, the sidenav will overlay/sit on top of this div.</p>
-  <p>Also notice that we have set overflow:auto to sidenav. This will add a scrollbar when the sidenav is too long (for example if it has over 50 links inside of it).</p>
+    <p style="text-align:center;font-size:1.5vw">Featuring us, the CREATORS:</p>
 </div>
+
+  <!--<h3>Try to scroll this area, and see how the sidenav sticks to the page</h3>
+  <p>Notice that this div element has a left margin of 12%. This is because the side navigation is set to 12% width. If you remove the margin, the sidenav will overlay/sit on top of this div.</p>
+  <p>Also notice that we have set overflow:auto to sidenav. This will add a scrollbar when the sidenav is too long (for example if it has over 50 links inside of it).</p>-->
 
 </body>
 </html>
