--- a/home.html
+++ b/home.html
@@ -3,14 +3,14 @@
     
 <style>
 body {
-    background-color: Black;
+    background-color: white;
 }
     h1 {
-    color: white;
+    color: black;
     text-align: center;
 }
 	h3 {
-    color: white;
+    color: black;
     text-align: center; 
 }
  </style>
