--- a/home.html
+++ b/home.html
@@ -2,6 +2,22 @@
 <html>
     
 <style>
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.bg {
+    /* The image used */
+    background-image: https://i.pinimg.com/736x/c2/af/2b/c2af2ba73d044f58aff6b88961e0c7ad--sun-moon-stars-moonchild.jpg("home.jpg");
+
+    /* Full height */
+    height: 50%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 body {
     background-color: white;
 }
@@ -17,5 +33,6 @@ body {
         
     <h1 style="font-family: Book Antiqua;">A Whole World Waiting to be Discovered</h1><br>
     <h3>Begin</h3>
-
+	</body>
+<div class="bg"></div>
 </html>
