--- a/zoomturn.html
+++ b/zoomturn.html
@@ -24,10 +24,64 @@ background-position: center;
   -webkit-transform: scale(5);
 }
 }
+.rotation {
+  -webkit-animation: rotating-function 1.25s linear infinite;
+     -moz-animation: rotating-function 1.25s linear infinite;
+      -ms-animation: rotating-function 1.25s linear infinite;
+       -o-animation: rotating-function 1.25s linear infinite;
+          animation: rotating-function 1.25s linear infinite;
+}
+
+@-webkit-keyframes rotating-function {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@-moz-keyframes rotating-function {
+  from {
+    -moz-transform: rotate(0deg);
+  }
+  to {
+    -moz-transform: rotate(360deg);
+  }
+}
+
+@-ms-keyframes rotating-function {
+  from {
+    -ms-transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+  }
+}
+
+@-o-keyframes rotating-function {
+  from {
+    -o-transform: rotate(0deg);
+  }
+  to {
+    -o-transform: rotate(360deg);
+  }
+}
+
+@keyframes rotating-function {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 
 </style>
 
 <body>
+  <div class="rotation">
+    <img src="wormhole.png">
 <div style = "position: absolute; top: 0; bottom: 0; left: 0; right: 0;" </div>
 </body>
 </html>
