--- a/zoomturn.html
+++ b/zoomturn.html
@@ -26,10 +26,7 @@ background-position: center;
 }
 .rotation {
   -webkit-animation: rotating-function 1.25s linear infinite;
-     -moz-animation: rotating-function 1.25s linear infinite;
-      -ms-animation: rotating-function 1.25s linear infinite;
-       -o-animation: rotating-function 1.25s linear infinite;
-          animation: rotating-function 1.25s linear infinite;
+  overflow:hidden;
 }
 
 @-webkit-keyframes rotating-function {
@@ -38,42 +35,6 @@ background-position: center;
   }
   to {
     -webkit-transform: rotate(360deg);
-  }
-}
-
-@-moz-keyframes rotating-function {
-  from {
-    -moz-transform: rotate(0deg);
-  }
-  to {
-    -moz-transform: rotate(360deg);
-  }
-}
-
-@-ms-keyframes rotating-function {
-  from {
-    -ms-transform: rotate(0deg);
-  }
-  to {
-    -ms-transform: rotate(360deg);
-  }
-}
-
-@-o-keyframes rotating-function {
-  from {
-    -o-transform: rotate(0deg);
-  }
-  to {
-    -o-transform: rotate(360deg);
-  }
-}
-
-@keyframes rotating-function {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
   }
 }
 
