--- a/zoomturn.html
+++ b/zoomturn.html
@@ -24,9 +24,11 @@ background-position: center;
   -webkit-transform: scale(5);
 }
 }
+  
 .rotation {
   -webkit-animation: rotating-function 1.25s linear infinite;
   overflow:hidden;
+  position:absolute;
 }
 
 @-webkit-keyframes rotating-function {
