--- a/zoomturn.html
+++ b/zoomturn.html
@@ -43,6 +43,6 @@ background-position: center;
 <body>
   <div class="rotation">
     <img src="wormhole.png">
-<div style = "position: absolute; top: 0; bottom: 0; left: 0; right: 0;" </div>
+<div style = "position: absolute; overflow: hidden;" </div>
 </body>
 </html>
