--- a/zoomturn.html
+++ b/zoomturn.html
@@ -2,7 +2,7 @@
 <html>
 <style>
 body {
-  background-color: black;
+  background-color: white;
 }
 
 div   {
@@ -11,7 +11,7 @@ background-position-x: 40%;
 background-position-y: 0%;
 background-size: cover;
 background-position: center;
--webkit-animation: zoomin 10s 1;
+-webkit-animation: zoomin 5s 1;
 }
 
 
@@ -26,7 +26,7 @@ background-position: center;
   
 .rotation {
   -webkit-animation: rotating-function 3s linear infinite;
-  position:relative;
+  position:absolute;
 }
 
 @-webkit-keyframes rotating-function {
@@ -43,6 +43,6 @@ background-position: center;
 <body>
   <div class="rotation">
     <img src="wormhole.png">
-<div style = "position: absolute; overflow: hidden; top:0;bottom:0;left:0;right:0;" </div>
+<div style = "position: relative; overflow: hidden; top:0;bottom:0;left:0;right:0;" </div>
 </body>
 </html>
