--- a/zoomturn.html
+++ b/zoomturn.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
 <style>
-body {
-  background-color: white;
-}
 
 div   {
 background-image: url(wormhole.png);
@@ -11,6 +8,8 @@ background-position-x: 40%;
 background-position-y: 0%;
 background-size: cover;
 background-position: center;
+position:absolute;
+background-color: black;
 -webkit-animation: zoomin 5s 1;
 }
 
@@ -42,8 +41,7 @@ background-position: center;
 </style>
 
 <body>
-  <div class="rotation">
-    <img src="wormhole.png">
+  <div class="rotation"></div>
 <div style = "position: absolute; overflow: hidden; top:0;bottom:0;left:0;right:0;" </div>
 </body>
 </html>
