--- a/zoomturn.html
+++ b/zoomturn.html
@@ -9,8 +9,9 @@ background-position-y: 0%;
 background-size: cover;
 background-position: center;
 position:absolute;
-background-color: black;
+background-color: white;
 -webkit-animation: zoomin 5s 1;
+overflow:hidden;
 }
 
 
@@ -42,6 +43,7 @@ background-color: black;
 
 <body>
   <div class="rotation"></div>
-<div style = "position: absolute; overflow: hidden; top:0;bottom:0;left:0;right:0;" </div>
+    <img src="wormhole.png">
+<div style = "position: relative; top:0;bottom:0;left:0;right:0;" </div>
 </body>
 </html>
