--- a/bios.html
+++ b/bios.html
@@ -44,6 +44,18 @@ li a:hover:not(.active) {
     background-color: #555;
     color: white;
 }
+div {
+    width: 10px;
+    height: 10px;
+    background: red;
+	-webkit-transition: width 2s, height 2s; /* For Safari 3.1 to 6.0 */
+    /*transition: width 2s, height 2s;*/
+}
+
+div:hover {
+    width: 300px;
+    height: 300px;
+}
 </style>
 </head>
 <body>
