--- a/zoomturn.html
+++ b/zoomturn.html
@@ -8,8 +8,8 @@ background-position-x: 40%;
 background-position-y: 0%;
 background-size: cover;
 background-position: center;
-position:absolute;
-background-color: white;
+position:relative;
+background-color: black;
 -webkit-animation: zoomin 5s 1;
 overflow:hidden;
 }
@@ -44,6 +44,6 @@ overflow:hidden;
 <body>
   <div class="rotation"></div>
     <img src="wormhole.png">
-<div style = "position: relative; top:0;bottom:0;left:0;right:0;" </div>
+<div style = "position: absolute; top:0;bottom:0;left:0;right:0;" </div>
 </body>
 </html>
