--- a/zoomturn.html
+++ b/zoomturn.html
@@ -9,41 +9,45 @@ background-position-y: 0%;
 background-size: cover;
 background-position: center;
 position:relative;
-background-color: black;
--webkit-animation: zoomin 5s 1;
+background-color: navy;
 overflow:hidden;
 }
 
-
-@-webkit-keyframes zoomin {
-0% {
-  -webkit-transform: scale(1);
-}
-100% {
-  -webkit-transform: scale(5);
-}
+  
+.forward  {
+   -webkit-animation: zoomin 5s 1;
 }
   
-.rotation {
+@-webkit-keyframes zoomin {
+0% {
+  -webkit-transform: scale(1);}
+100% {
+  -webkit-transform: scale(5);}
+overflow: hidden;
+}
+  
+  
+.spin {
   -webkit-animation: rotating-function 3s linear infinite;
-  position:relative;
-  overflow:hidden;
 }
 
 @-webkit-keyframes rotating-function {
   from {
-    -webkit-transform: rotate(0deg);
-  }
+    -webkit-transform: rotate(0deg);}
   to {
-    -webkit-transform: rotate(360deg);
-  }
+    -webkit-transform: rotate(360deg);}
 }
 
+  
 </style>
 
+  
 <body>
-  <div class="rotation"></div>
-    <img src="wormhole.png">
-<div style = "position: absolute; top:0;bottom:0;left:0;right:0;" </div>
+<div style = "position: absolute; top:0;bottom:0;left:0;right:0;">
+  <div class= "forward">
+  <img src="wormhole.png"></div>
+  <div class= "spin">
+<img src="wormhole.png"></div>
+ </div>
 </body>
 </html>
