--- a/zoomturn.html
+++ b/zoomturn.html
@@ -23,7 +23,7 @@ overflow:hidden;
 @-webkit-keyframes rotating-function {
   from {-webkit-transform: rotate(0deg);}
   to {-webkit-transform: rotate(360deg);}
-  position: center;
+  position: relative;
   overflow: hidden;
 }
 
