--- a/zoomturn.html
+++ b/zoomturn.html
@@ -8,7 +8,7 @@ background-position-x: 40%;
 background-position-y: 0%;
 background-size: cover;
 background-position: center;
-background-color: black;
+background-color: navy;
 overflow:hidden;
 -webkit-animation: zoomin 5s 1;
 -webkit-animation: rotating-function 3s linear infinite;
