--- a/marginnav.html
+++ b/marginnav.html
@@ -31,8 +31,8 @@ ul {
     width: 15%;
     background-color: #ffdace;
     position: fixed;
-    height: 100%;
-    overflow: auto;
+    height: 10%;
+    <!--overflow: auto;-->
 }
 
 .circular--square {
@@ -84,9 +84,9 @@ img {
 <img class="circular--square" src="castle.jpg" alt="Castle" style="width:40vw" <!--"width="400" height="300">-->
 </div>
 <br>
-<div style="margin-left:15%;padding:1px 16px;height:1000px;">
-    <p style="text-align:center;font-size:3vw">Let's get a little personal</p>
-</div>
+<!--<div style="margin-left:15%;padding:1px 16px;height:1000px;">-->
+
+<p style="text-align:center;font-size:3vw">Let's get a little personal</p>
 
   <!--<h3>Try to scroll this area, and see how the sidenav sticks to the page</h3>
   <p>Notice that this div element has a left margin of 12%. This is because the side navigation is set to 12% width. If you remove the margin, the sidenav will overlay/sit on top of this div.</p>
