--- a/marginnav.html
+++ b/marginnav.html
@@ -32,7 +32,7 @@ ul {
     background-color: #ffdace;
     position: fixed;
     height: 10%;
-    <!--overflow: auto;-->
+/*--< overflow: auto;>*/
 }
 
 .circular--square {
