--- a/marginnav.html
+++ b/marginnav.html
@@ -81,7 +81,7 @@ img {
     
 </style>
 <div class="zoomin">
-<img class="circular--square" src="castle.jpg" alt="Castle" style="width:40vw" <!--"width="400" height="300">-->
+<img class="circular--square" src="castle.jpg" alt="Castle" <!--style="width:40vw" "width="400" height="300">-->
 </div>
 <br>
 <!--<div style="margin-left:15%;padding:1px 16px;height:1000px;">-->
