--- a/zoomturn.html
+++ b/zoomturn.html
@@ -3,7 +3,7 @@
 <style>
 
 body  {
-  background-color: black;
+  background-color: navy;
   background-size: cover;
   overflow: hidden;
 }
@@ -13,8 +13,7 @@ div   {
   background-position-x: 50%;
   background-position-y: 0%;
   background-position: center;  
-  background-repeat: no-repeat;
-  -webkit-animation: zoomin 5s 1;
+  -webkit-animation: zoomin 5s linear 1;
   -webkit-animation: rotating-function 1s linear infinite;
 }
   
@@ -39,6 +38,6 @@ div   {
 
   
 <body>
-<div style = "position: absolute; top:0;bottom:0;left:0;right:0;"> </div>
+<div style = "top:0;bottom:0;left:0;right:0;"> </div>
 </body>
 </html>
