--- a/zoomturn.html
+++ b/zoomturn.html
@@ -6,6 +6,7 @@ body  {
   background-color: navy;
   background-size: cover;
   overflow: hidden;
+  position: absolute;
 }
 
 div   {
@@ -38,6 +39,6 @@ div   {
 
   
 <body>
-<div style = "top:0;bottom:0;left:0;right:0;"> </div>
+<div style = "position: relative; top:0;bottom:0;left:0;right:0;"> </div>
 </body>
 </html>
