--- a/zoomturn.html
+++ b/zoomturn.html
@@ -3,7 +3,7 @@
 <style>
 
 body  {
-  background-color: navy;
+  background-color: black;
   background-size: cover;
   overflow: hidden;
   position: absolute;
