--- a/zoomturn.html
+++ b/zoomturn.html
@@ -3,10 +3,10 @@
 <style>
 
 body  {
-  background-color: black;
+  background-color: white;
   background-size: cover;
   overflow: hidden;
-  position: absolute;
+  position: relative;
 }
 
 div   {
@@ -14,6 +14,7 @@ div   {
   background-position-x: 50%;
   background-position-y: 0%;
   background-position: center;  
+  background-repeat: no-repeat;
   -webkit-animation: zoomin 5s linear 1;
   -webkit-animation: rotating-function 1s linear infinite;
 }
@@ -39,6 +40,6 @@ div   {
 
   
 <body>
-<div style = "position: relative; top:0;bottom:0;left:0;right:0;"> </div>
+<div style = "position: absolute; top:0;bottom:0;left:0;right:0;"> </div>
 </body>
 </html>
