--- a/zoomturn.html
+++ b/zoomturn.html
@@ -2,32 +2,34 @@
 <html>
 <style>
 
-body  {
-  background-color: white;
-  background-size: cover;
+body   {
+  background-color: black;
   overflow: hidden;
-  position: relative;
+  }
+  
+div {
+    background-image: url("wormhole.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    background-position-x: 50%;
+    background-position-y: 0%;
+    -webkit-animation: zoomin 5s 1;
+}
+@-webkit-keyframes zoomin {
+    0% {
+      -webkit-transform: scale(1);
+    }
+    100% {
+      -webkit-transform: scale(2);
+    }
 }
 
-div   {
-  background-image: url(wormhole.png);
-  background-position-x: 50%;
-  background-position-y: 0%;
-  background-position: center;  
-  background-repeat: no-repeat;
-  -webkit-animation: zoomin 5s linear 1;
+.spin   {
   -webkit-animation: rotating-function 1s linear infinite;
 }
-  
-@-webkit-keyframes zoomin {
-  0% {
-    -webkit-transform: scale(1);
-  }
-  100% {
-    -webkit-transform: scale(5);
-  }
-  position: relative;
-}
+
   
 @-webkit-keyframes rotating-function {
   from {-webkit-transform: rotate(0deg);}
@@ -40,6 +42,10 @@ div   {
 
   
 <body>
-<div style = "position: absolute; top:0;bottom:0;left:0;right:0;"> </div>
+  <div class = "spin">
+    <img src = "wormhole.png">
+<div style = "position:absolute; top:0;bottom:0;left:0;right:0;">
+    </div>
+  </div>
 </body>
 </html>
