--- a/zoomturn.html
+++ b/zoomturn.html
@@ -3,7 +3,7 @@
 <style>
 
 body   {
-  background-color: blue;
+  background-color: black;
   overflow: hidden;
   }
   
@@ -14,7 +14,7 @@ div {
     background-size: cover;
     background-position: center;
     background-position-x: 50%;
-    background-position-y: 50%;
+    background-position-y: 0%;
     -webkit-animation: zoomin 5s 1;
 }
 @-webkit-keyframes zoomin {
