--- a/zoomturn.html
+++ b/zoomturn.html
@@ -8,13 +8,13 @@ body   {
   }
   
 div {
-    background-image: url("wormhole.png");
+    background-image: url("wormhole.png") center center no-repeat;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
     background-position-x: 50%;
-    background-position-y: -50%;
+    background-position-y: 0%;
     -webkit-animation: zoomin 5s 1;
 }
 @-webkit-keyframes zoomin {
