--- a/zoomturn.html
+++ b/zoomturn.html
@@ -8,9 +8,16 @@ body   {
   }
   
 div {
-    background-image: url("wormhole.png") center center no-repeat;
+    background-image: url("wormhole.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
+    display: inline-block;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
     background-size: cover;
     background-position: center;
     background-position-x: 50%;
