--- a/zoomturn.html
+++ b/zoomturn.html
@@ -11,12 +11,9 @@ div {
     background-image: url("wormhole.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
-    display: inline-block;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-size: cover;
     background-position: center;
     background-position-x: 50%;
