--- a/zoomturn.html
+++ b/zoomturn.html
@@ -15,6 +15,8 @@ div {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
+    background-position-x: 50%;
+    background-position-y: 0%;
     background-size: cover;
     -webkit-animation: zoomin 5s 1;
 }
