--- a/zoomturn.html
+++ b/zoomturn.html
@@ -14,12 +14,13 @@ div {
     background-image: url("wormhole.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
- 
+    background-position: center;
     background-position-x: 50%;
     background-position-y: 0%;
     background-size: cover;
     -webkit-animation: zoomin 5s 1;
 }
+  
 @-webkit-keyframes zoomin {
     0% {
       -webkit-transform: scale(1);
@@ -31,6 +32,8 @@ div {
 
 .spin   {
   -webkit-animation: rotating-function 1s linear infinite;
+  -moz-animation:rotating-function 1s linear infinite;
+  animation:rotating-function 1s linear infinite;
 }
 
   
@@ -39,6 +42,18 @@ div {
   to {-webkit-transform: rotate(360deg);}
   position: relative;
   overflow: hidden;
+}
+@-moz-keyframes rotating-function { 
+  100% { 
+    -moz-transform: rotate(360deg); 
+  } 
+}
+
+@keyframes rotating-function { 
+  100% { 
+    -webkit-transform: rotate(360deg); 
+    transform:rotate(360deg); 
+  } 
 }
 
 </style>
