--- a/zoomturn.html
+++ b/zoomturn.html
@@ -63,7 +63,7 @@ div {
 <body>
   <div class = "spin">
     <img src = "wormhole.png">
-<div style = "top:0;bottom:0;left:0;right:0;margin:auto;">
+<div style = "position: absoute; top:0;bottom:0;left:0;right:0;margin:auto;">
     </div>
   </div>
 </body>
