--- a/zoomturn.html
+++ b/zoomturn.html
@@ -14,10 +14,10 @@ div {
     background-image: url("wormhole.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
     background-position: center;
     background-position-x: 50%;
     background-position-y: 0%;
-    background-size: cover;
     -webkit-animation: zoomin 5s 1;
 }
   
@@ -48,7 +48,7 @@ div {
 <body>
   <div class = "spin">
     <img src = "wormhole.png">
-<div style = "position: absoute; top:0;bottom:0;left:0;right:0;margin:auto;">
+<div style = "position: absoute; top:0;bottom:0;left:0;right:0;">
     </div>
   </div>
 </body>
