--- a/zoomturn.html
+++ b/zoomturn.html
@@ -48,7 +48,7 @@ div {
 <body>
   <div class = "spin">
     <img src = "wormhole.png">
-<div style = "position: absoute; top:0;bottom:0;left:0;right:0;">
+<div style = "position: absolute; top:0;bottom:0;left:0;right:0;">
     </div>
   </div>
 </body>
