--- a/marginnav.html
+++ b/marginnav.html
@@ -87,32 +87,29 @@ img {
 <p style="text-align:center;font-size:3vw">Let's get a little personal</p>
 
 <div class="row">
-  ::before
   <div class="col-sm-3">
-    <img class="circular--square" src="castle.jpg" alt="Mariana" style="width:11vw;">
+    <img class="circular--square" src="borzoi.jpg" alt="Mariana" style="width:11vw;">
     <h2>Mariana</h2>
     <p>Insert you're bio here</p>
   </div>
   <div class="col-sm-3">
-    <img class="circular--square" src="castle.jpg" alt="Maliha" style="width:11vw;">
+    <img class="circular--square" src="borzoi.jpg" alt="Maliha" style="width:11vw;">
     <h2>Maliha</h2>
     <p>Insert you're bio here</p>
   </div>
   <div class="col-sm-3">
-    <img class="circular--square" src="castle.jpg" alt="Noelia" style="width:11vw;">
+    <img class="circular--square" src="borzoi.jpg" alt="Noelia" style="width:11vw;">
     <h2>Noelia</h2>
     <p>Insert you're bio here</p>
   </div>
   <div class="col-sm-3">
-    <img class="circular--square" src="castle.jpg" alt="Ginevra" style="width:11vw;">
+    <img class="circular--square" src="borzoi.jpg" alt="Ginevra" style="width:11vw;">
     <h2>Ginevra</h2>
     <p>Insert you're bio here</p>
-    ::after
   </div>
   <br>
   <br>
   <br>
-  ::after
 </div>
     
   <!--<h3>Try to scroll this area, and see how the sidenav sticks to the page</h3>
