--- a/marginnav.html
+++ b/marginnav.html
@@ -100,24 +100,24 @@ img {
 
 <div class="row">
   <div class="col-sm-3">
-    <h2>Mariana</h2>
     <img class="circular--square" src="borzoi.jpg" alt="Mariana" style="width:11vw;">
-    <p>Insert you're bio here</p>
+    <h2 style="text-align:center">Mariana</h2>
+    <p style="text-align:center">Insert you're bio here</p>
   </div>
   <div class="col-sm-3">
-    <h2>Maliha</h2>
     <img class="circular--square" src="borzoi.jpg" alt="Maliha" style="width:11vw;">
-    <p>Insert you're bio here</p>
+    <h2 style="text-align:center">Maliha</h2>
+    <p style="text-align:center">Insert you're bio here</p>
   </div>
   <div class="col-sm-3">
-    <h2>Noelia</h2>
     <img class="circular--square" src="borzoi.jpg" alt="Noelia" style="width:11vw;">
-    <p>Insert you're bio here</p>
+    <h2 style="text-align:center">Noelia</h2>
+    <p style="text-align:center">Insert you're bio here</p>
   </div>
   <div class="col-sm-3">
-    <h2>Ginevra</h2>
     <img class="circular--square" src="borzoi.jpg" alt="Ginevra" style="width:11vw;">
-    <p>Insert you're bio here</p>
+    <h2 style="text-align:center">Ginevra</h2>
+    <p style="text-align:center">Insert you're bio here</p>
   </div>
   <br>
   <br>
