--- a/marginnav.html
+++ b/marginnav.html
@@ -24,12 +24,12 @@ body {
     margin-left: -15px;
 }
     
-.col-sm-3 {
+<!--.col-sm-3 {
     position: relative;
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
-}
+}-->
     
 p {
     font-family: 'Times New Roman', serif;
@@ -99,7 +99,7 @@ img {
 <p style="text-align:center;font-size:3vw">Let's get a little personal</p>
 
 <div class="row">
-  <div class="col-sm-3">
+  <div class="zoomin">
     <img class="circular--square" src="borzoi.jpg" alt="Mariana" style="width:11vw;">
     <h2 style="text-align:center">Mariana</h2>
     <p style="text-align:center">Insert you're bio here</p>
