--- a/marginnav.html
+++ b/marginnav.html
@@ -100,21 +100,21 @@ img {
 
 <div class="row">
   <div class="zoomin">
-    <img class="circular--square" src="borzoi.jpg" alt="Mariana" style="width:11vw;">
+    <img class="circular--square" src="borzoi.jpg" alt="Mariana">
     <h2 style="text-align:center">Mariana</h2>
     <p style="text-align:center">Insert you're bio here</p>
   </div>
-  <div class="col-sm-3">
+  <div class="zoomin">
     <img class="circular--square" src="borzoi.jpg" alt="Maliha" style="width:11vw;">
     <h2 style="text-align:center">Maliha</h2>
     <p style="text-align:center">Insert you're bio here</p>
   </div>
-  <div class="col-sm-3">
+  <div class="zoomin">
     <img class="circular--square" src="borzoi.jpg" alt="Noelia" style="width:11vw;">
     <h2 style="text-align:center">Noelia</h2>
     <p style="text-align:center">Insert you're bio here</p>
   </div>
-  <div class="col-sm-3">
+  <div class="zoomin">
     <img class="circular--square" src="borzoi.jpg" alt="Ginevra" style="width:11vw;">
     <h2 style="text-align:center">Ginevra</h2>
     <p style="text-align:center">Insert you're bio here</p>
