--- a/marginnav.html
+++ b/marginnav.html
@@ -105,17 +105,17 @@ img {
     <p style="text-align:center">Insert you're bio here</p>
   </div>
   <div class="zoomin">
-    <img class="circular--square" src="borzoi.jpg" alt="Maliha" style="width:11vw;">
+    <img class="circular--square" src="borzoi.jpg" alt="Maliha">
     <h2 style="text-align:center">Maliha</h2>
     <p style="text-align:center">Insert you're bio here</p>
   </div>
   <div class="zoomin">
-    <img class="circular--square" src="borzoi.jpg" alt="Noelia" style="width:11vw;">
+    <img class="circular--square" src="borzoi.jpg" alt="Noelia">
     <h2 style="text-align:center">Noelia</h2>
     <p style="text-align:center">Insert you're bio here</p>
   </div>
   <div class="zoomin">
-    <img class="circular--square" src="borzoi.jpg" alt="Ginevra" style="width:11vw;">
+    <img class="circular--square" src="borzoi.jpg" alt="Ginevra">
     <h2 style="text-align:center">Ginevra</h2>
     <p style="text-align:center">Insert you're bio here</p>
   </div>
