--- a/marginnav.html
+++ b/marginnav.html
@@ -23,7 +23,14 @@ body {
     margin-right: -15px;
     margin-left: -15px;
 }
-    
+  
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 <!--.col-sm-3 {
     position: relative;
     min-height: 1px;
@@ -98,27 +105,29 @@ img {
 
 <p style="text-align:center;font-size:3vw">Let's get a little personal</p>
 
-<div class="row">
-  <div class="zoomin">
-    <img class="circular--square" src="borzoi.jpg" alt="Mariana">
-    <h2 style="text-align:center">Mariana</h2>
-    <p style="text-align:center">Insert you're bio here</p>
-  </div>
-  <div class="zoomin">
-    <img class="circular--square" src="borzoi.jpg" alt="Maliha">
-    <h2 style="text-align:center">Maliha</h2>
-    <p style="text-align:center">Insert you're bio here</p>
-  </div>
-  <div class="zoomin">
-    <img class="circular--square" src="borzoi.jpg" alt="Noelia">
-    <h2 style="text-align:center">Noelia</h2>
-    <p style="text-align:center">Insert you're bio here</p>
-  </div>
-  <div class="zoomin">
-    <img class="circular--square" src="borzoi.jpg" alt="Ginevra">
-    <h2 style="text-align:center">Ginevra</h2>
-    <p style="text-align:center">Insert you're bio here</p>
-  </div>
+<div class="container">    
+    <div class="row">
+      <div class="zoomin">
+        <img class="circular--square" src="borzoi.jpg" alt="Mariana">
+        <h2 style="text-align:center">Mariana</h2>
+        <p style="text-align:center">Insert you're bio here</p>
+      </div>
+      <div class="zoomin">
+        <img class="circular--square" src="borzoi.jpg" alt="Maliha">
+        <h2 style="text-align:center">Maliha</h2>
+        <p style="text-align:center">Insert you're bio here</p>
+      </div>
+      <div class="zoomin">
+        <img class="circular--square" src="borzoi.jpg" alt="Noelia">
+        <h2 style="text-align:center">Noelia</h2>
+        <p style="text-align:center">Insert you're bio here</p>
+      </div>
+      <div class="zoomin">
+        <img class="circular--square" src="borzoi.jpg" alt="Ginevra">
+        <h2 style="text-align:center">Ginevra</h2>
+        <p style="text-align:center">Insert you're bio here</p>
+      </div>
+    </div>
 </div>
     
   <!--<h3>Try to scroll this area, and see how the sidenav sticks to the page</h3>
