--- a/marginnav.html
+++ b/marginnav.html
@@ -31,12 +31,12 @@ body {
     margin-left: auto;
 }
 
-<!--.col-sm-3 {
+.col-sm-3 {
     position: relative;
     min-height: 1px;
     padding-right: 15px;
     padding-left: 15px;
-}-->
+}
     
 p {
     font-family: 'Times New Roman', serif;
@@ -107,7 +107,8 @@ img {
 
 <div class="container">    
     <div class="row">
-      <div class="zoomin">
+      <div class="col-sm-3">      
+        <div class="zoomin">
         <img class="circular--square" src="borzoi.jpg" alt="Mariana">
         <h2 style="text-align:center">Mariana</h2>
         <p style="text-align:center">Insert you're bio here</p>
@@ -126,6 +127,7 @@ img {
         <img class="circular--square" src="borzoi.jpg" alt="Ginevra">
         <h2 style="text-align:center">Ginevra</h2>
         <p style="text-align:center">Insert you're bio here</p>
+          </div>
       </div>
     </div>
 </div>
