--- a/marginnav.html
+++ b/marginnav.html
@@ -55,6 +55,13 @@ ul {
 }
 
 .circular--square {
+    border-radius: 20%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+    
+.circular--square2 {
     border-radius: 50%;
     margin-left: auto;
     margin-right: auto;
@@ -109,25 +116,25 @@ img {
     <div class="row">
       <div class="col-sm-3">      
         <div class="zoomin">
-        <img class="circular--square" src="borzoi.jpg" alt="Mariana">
-        <h2 style="text-align:center">Mariana</h2>
-        <p style="text-align:center">Insert you're bio here</p>
-      </div>
-      <div class="zoomin">
-        <img class="circular--square" src="borzoi.jpg" alt="Maliha">
-        <h2 style="text-align:center">Maliha</h2>
-        <p style="text-align:center">Insert you're bio here</p>
-      </div>
-      <div class="zoomin">
-        <img class="circular--square" src="borzoi.jpg" alt="Noelia">
-        <h2 style="text-align:center">Noelia</h2>
-        <p style="text-align:center">Insert you're bio here</p>
-      </div>
-      <div class="zoomin">
-        <img class="circular--square" src="borzoi.jpg" alt="Ginevra">
-        <h2 style="text-align:center">Ginevra</h2>
-        <p style="text-align:center">Insert you're bio here</p>
-          </div>
+            <img class="circular--square2" src="borzoi.jpg" alt="Mariana">
+            <h2 style="text-align:center">Mariana</h2>
+            <p style="text-align:center">Insert you're bio here</p>
+        </div>
+        <div class="zoomin">
+            <img class="circular--square2" src="borzoi.jpg" alt="Ginevra">
+            <h2 style="text-align:center">Ginevra</h2>
+            <p style="text-align:center">Insert you're bio here</p>
+        </div>
+        <div class="zoomin">
+            <img class="circular--square2" src="borzoi.jpg" alt="Maliha">
+            <h2 style="text-align:center">Maliha</h2>
+            <p style="text-align:center">Insert you're bio here</p>
+        </div>
+        <div class="zoomin">
+            <img class="circular--square2" src="borzoi.jpg" alt="Noelia">
+            <h2 style="text-align:center">Noelia</h2>
+            <p style="text-align:center">Insert you're bio here</p>
+        </div>
       </div>
     </div>
 </div>
