--- a/marginnav.html
+++ b/marginnav.html
@@ -120,16 +120,19 @@ img {
             <h2 style="text-align:center">Mariana</h2>
             <p style="text-align:center">Insert you're bio here</p>
         </div>
+      </div>
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Ginevra">
             <h2 style="text-align:center">Ginevra</h2>
             <p style="text-align:center">Insert you're bio here</p>
         </div>
+      </div>
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Maliha">
             <h2 style="text-align:center">Maliha</h2>
             <p style="text-align:center">Insert you're bio here</p>
         </div>
+      </div>
         <div class="zoomin">
             <img class="circular--square2" src="borzoi.jpg" alt="Noelia">
             <h2 style="text-align:center">Noelia</h2>
