--- a/NAVIGATIONbarforhomepage.html
+++ b/NAVIGATIONbarforhomepage.html
@@ -45,7 +45,7 @@ li a:hover:not(active) {
 
 <ul>
   <li><a class="active" href="homepage.html">Home</a></li>
-  <li><a class="active" href="marginnav.html">About</a></li>
+  <li><a class="active" href="aboutuspage.html">About</a></li>
 </ul>
 
 </body>
