--- a/aboutuspage.html
+++ b/aboutuspage.html
@@ -100,7 +100,7 @@ img {
 </ul>
  
 <div>
-<h1 style = "margin-top:5vh;text-align:center;">Creators</h1>  
+<h1 style = "margin-top:5vh;text-align:center;font-size:5vw;">Authors</h1>  
 <hr style = "width:4vw;border-color:black;" size="10px">
 </div>
     
@@ -110,7 +110,7 @@ img {
 <br>
 <!--<div style="margin-left:15%;padding:1px 16px;height:1000px;">-->
 
-<p style="text-align:center;font-size:3vw">Let's get a little personal</p>
+<p style="text-align:center;font-size:2vw">Let's get a little personal</p>
 
 <div class="container">    
     <div class="row">
