--- a/zoomturn.html
+++ b/zoomturn.html
@@ -32,7 +32,8 @@ div {
 
 .spin   {
   -webkit-animation: rotating-function 1s linear infinite;
-  transform-origin: 0% 25%;
+  transform-origin: 50% 50%;
+  background-position: center;
 }
 
   
